--- a/.env.exapmle
+++ b/.env.exapmle
@@ -1,2 +1,2 @@
-MONGODB_URI
-PORT
+MONGODB_URI= // адрес до БД, например mongodb+srv://LOGIN:PASSWORD@cluster0.cpcafsl.mongodb.net/...
+PORT= // порт сервера, например 4444
