--- a/.env.exapmle
+++ b/.env.exapmle
@@ -1,2 +1,9 @@
-MONGODB_URI= // адрес до БД, например mongodb+srv://LOGIN:PASSWORD@cluster0.cpcafsl.mongodb.net/...
+MONGODB_URI= // адрес БД, например mongodb+srv://LOGIN:PASSWORD@cluster0.cpcafsl.mongodb.net/...
 PORT= // порт сервера, например 4444
+
+// AWS storage
+AWS_REGION=
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_SESSION_TOKEN=
+AWS_BUCKET_NAME=
