--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.3",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "socket.io": "^4.6.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
