chanded url address for socket.io

--- a/.env.exapmle
+++ b/.env.exapmle
@@ -1,5 +1,6 @@
 MONGODB_URI= // адрес БД, например mongodb+srv://LOGIN:PASSWORD@cluster0.cpcafsl.mongodb.net/...
 PORT= // порт сервера, например 4444
+FRONTEND_URL= // адрес frontend сервера
 
 // AWS storage
 AWS_REGION=
